# card-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/actions/setup-ninja/: action.yml
.github/workflows/: build-desktop.yml  build-web.yml  ci.yml  release.yml
assets/fonts/: ThaleahFat.fnt  ThaleahFat2.fnt  monogram.fnt
assets/textures/atlas/: base-card-atlas.json  tarot-card-atlas.json  ui-atlas.json
src/: card.cpp  card.h  game.cpp  game.h  layout.cpp  layout.h  main.cpp  pages.cpp  pages.h  template.html  textrenderer.cpp  textrenderer.h  texturemanager.h  typedef.cpp  typedef.h  widget.cpp  widget.h
